Completed the final style touches, including fixing the console buttons in place and adding mouseenter and mouseleave events on the game board to contrast the tics and tacs from the background.

--- a/style.css
+++ b/style.css
@@ -70,7 +70,6 @@ button,input,#submit{
         .greyButton:hover{
             margin:6px 6px 2px 2px;
             box-shadow:0px 0px #958b8b;
-            /*overflow:hidden;*/
         }
         #scoreKeeperOneName,#scoreKeeperTwoName{
             display:inline-block;
@@ -172,8 +171,17 @@ button,input,#submit{
 }
     #playerConsole .right{
        max-width:300px;
-       float:right;
+       /*float:right;*/
+       position:absolute;
+       padding-left:10px;
     }
+        #playerConsole .right div{
+            position:relative;
+        }
+            #playerConsole .right #resetGameWrapper{
+                top:-48px;
+                left:144px;
+            }
     #playerConsole .left{
         max-width:440px;
     }
@@ -201,7 +209,7 @@ button,input,#submit{
         display:inline-block;
         background-color:#245b1f;
         border:1px solid #dcdcdc;
-        margin:2px;
+        margin:2px 6px 2px 14px;
         padding:10px 4px 4px 4px;
         color:#78ff9a;
         height:100%;
@@ -210,7 +218,3 @@ button,input,#submit{
         font-size: 20px;
         text-align: center;
     }
-        #playerConsole .right button{
-            display:inline-block;
-            /*width:140px;*/
-        }
